# holdmybackup

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
src/: lib.rs
src/backup/: interface.rs  internal.rs  mod.rs
src/config/: args.rs  config_file.rs  mod.rs
src/http/: handler.rs  mod.rs
src/log/: mod.rs
src/storage/: minio.rs  mod.rs  model.rs
