[package]
name = "holdmybackup"
version = "0.1.0"
authors = ["Taylan Dogan <git@taylandogan.info>"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1"
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.12"
tracing = {version = "*"}
tracing-subscriber = "*"
async-trait = "*"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

rust-s3 = {git = "https://github.com/durch/rust-s3", version = "0.27.0-rc3", features = ["with-tokio"] }

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1