[package]
name = "holdmybackup"
version = "0.1.0"
authors = ["Taylan Dogan <git@taylandogan.info>"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1"
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
crossbeam-channel = "0.5"
notify = "5.0.0-pre.12"
tracing = {version = "*"}
tracing-subscriber = { version = "0.2.20", features = ["env-filter", "fmt"]}
async-trait = "*"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
rust-s3 = {git = "https://github.com/durch/rust-s3", version = "0.27.0-rc3", features = ["with-tokio"] }
flate2 = "1.0"
tar = "0.4"
reload_config = "0.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1